# ha-miningpoolhub

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  hacs.json  info.md  pyproject.toml  setup.cfg  tox.ini
.devcontainer/: configuration.yaml  devcontainer.json
.github/workflows/: home-assistant-validation.yml  publish-docs-github-pages.yml  python-package.yml  release.yml
custom_components/: __init__.py  custom_components
custom_components/miningpoolhub/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  strings.json
tests/: conftest.py  test_config_flow.py  test_init.py  test_sensors.py
tests/cassettes/test_config_flow/: test_validate_auth_invalid[pyloop].yaml  test_validate_auth_valid[pyloop].yaml  test_validate_coin_valid[pyloop].yaml
tests/cassettes/test_sensors/: test_async_update_success[pyloop].yaml
