[tool.poetry]
name = "ha-miningpoolhub"
version = "0.1.0"
description = "A custom component to plug the miningpoolhub_py API wrapper into Home Assistant"
authors = ["CoryKrol <16892390+CoryKrol@users.noreply.github.com>"]
license = "Apache-2.0"
packages = [
    { include = "custom_components"}
]

[tool.poetry.dependencies]
python = "^3.9"
homeassistant = "^2021.10.0b1"
miningpoolhub-py = "^1.0.9"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.0"
yamllint = "^1.26.3"
codespell = "^2.1.0"
safety = "^1.10.3"
mypy = "^0.910"
pre-commit = "^2.15.0"
flake8 = "^4.0.1"
black = "^21.9b0"
pytest-homeassistant-custom-component = "^0.4.5"
pytest-recording = "^0.12.0"
pytest-asyncio = "^0.16.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
