[tool.poetry]
name = "ha-miningpoolhub"
version = "0.2.9"
description = "A custom component to plug the miningpoolhub_py API wrapper into Home Assistant"
authors = ["CoryKrol <16892390+CoryKrol@users.noreply.github.com>"]
license = "Apache-2.0"
packages = [
    { include = "custom_components"}
]

[tool.poetry.dependencies]
python = "^3.8"
miningpoolhub-py = "^1.0.18"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
yamllint = "^1.26.3"
codespell = "^2.1.0"
safety = "^1.10.3"
mypy = "^0.910"
pre-commit = "^2.16.0"
flake8 = "^4.0.1"
black = "^21.12b0"
homeassistant = "^2021.10.0b1"
pytest-homeassistant-custom-component = "^0.5.5"
mutmut = "^2.2.0"
tox = "^3.24.4"
tox-poetry = "^0.4.1"
pytest-asyncio = "^0.16.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.format]
max-line-length = 88

[tool.isort]
profile = "black"
force_sort_within_sections = true
combine_as_imports = true
known_first_party = [
    "homeassistant",
]

[tool.bandit]
skips = ["B101"]